# src/main/java/org/siri_hate/main_service/model/mapper/ProjectMapper.java
@@ -9,16 +9,21 @@ import org.siri_hate.main_service.dto.ProjectPageResponseDTO;
 import org.siri_hate.main_service.dto.ProjectRequestDTO;
 import org.siri_hate.main_service.dto.ProjectSummaryResponseDTO;
 import org.siri_hate.main_service.model.entity.project.Project;
+import org.siri_hate.main_service.model.mapper.utils.CategoryResolver;
+import org.siri_hate.main_service.model.mapper.utils.ImageUrlResolver;
+import org.siri_hate.main_service.model.mapper.utils.UserResolver;
 import org.springframework.data.domain.Page;
-
-import java.util.List;
 
 @Mapper(
         componentModel = "spring",
         uses = {
                 UserMapper.class,
                 ProjectMemberMapper.class,
-                CommentMapper.class},
+                CommentMapper.class,
+                ImageUrlResolver.class,
+                CategoryResolver.class,
+                UserResolver.class
+        },
         unmappedTargetPolicy = ReportingPolicy.IGNORE
 )
 public interface ProjectMapper {
@@ -28,10 +33,13 @@ public interface ProjectMapper {
 
     void projectUpdate(ProjectRequestDTO request, @MappingTarget Project project);
 
-    @Mapping(target = "category", ignore = true)
+    @Mapping(target = "logoUrl", source = "imageKey", qualifiedByName = "toProjectUrl")
+    @Mapping(target = "category", source = "category", qualifiedByName = "toProjectCategoryName")
     ProjectFullResponseDTO toProjectFullResponse(Project project);
 
-    @Mapping(target = "category", ignore = true)
+    @Mapping(target = "logoUrl", source = "imageKey", qualifiedByName = "toProjectUrl")
+    @Mapping(target = "category", source = "category", qualifiedByName = "toProjectCategoryName")
+    @Mapping(target = "owner", source = "owner", qualifiedByName = "toUsername")
     ProjectSummaryResponseDTO toProjectSummaryResponse(Project project);
 
     ProjectPageResponseDTO toProjectPageResponse(Page<Project> projects);
